# distarpwatcher

./: Makefile  README.md
agent/: .gitignore  Makefile  agent.conf
agent/src/: capture.c  capture.h  config.c  config.h  grpc_client.cpp  grpc_client.h  log.h  main.c  signals.c  signals.h
common/: arp_poisoning_container.sh  cert_gen.sh  collector.proto  install_agent.sh  seed_arp_events.sql
server/: .gitignore  Makefile  config.yaml  docker-compose.yml  go.mod  go.sum
server/cmd/: main.go
server/internal/analyzer/: analyzer.go  step_frequency.go  step_mac_change.go  step_mac_spoof.go
server/internal/api/: server.go
server/internal/api/routes/: arp_events.go  notification_channels.go
server/internal/collector/: grpc_server.go
server/internal/config/: config.go
server/internal/database/: database.go  migrations.go
server/internal/database/sql/: 000001_init_schema.up.sql  000002_create_ip_mac_bindings.up.sql  000003_create_notification_channels.up.sql
server/internal/notifier/: notifier.go  sender_mail.go  sender_webhook.go
tests/: README.md  pyproject.toml
tests/distarpwatcher_tests/: alert_server.py  arp_flood.py  arp_poison.py
